--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -35,6 +35,6 @@ provider:
 # upload channel target in recipe/conda_build_config.yaml
 channels:
   targets:
-    - ["YOUR_ANACONDA_CHANNEL", "main"]
+    - ["ryanvolz", "main"]
 github:
-  user_or_org: YOUR_GITHUB_USER_OR_ORG
+  user_or_org: ryanvolz
