MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.14.0, and conda-forge-pinning 2021.10.22.20.56.07

--- a/.ci_support/linux_64_python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_python3.7.____cpython.yaml
@@ -7,7 +7,7 @@ cdt_name:
 channel_sources:
 - conda-forge
 channel_targets:
-- YOUR_ANACONDA_CHANNEL main
+- ryanvolz main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
