--- a/.ci_support/osx_64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_64_python3.9.____cpython.yaml
@@ -7,7 +7,7 @@ c_compiler_version:
 channel_sources:
 - conda-forge
 channel_targets:
-- YOUR_ANACONDA_CHANNEL main
+- ryanvolz main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
